--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -237,6 +237,7 @@
     "@mongodb-js/webpack-config-compass": "^1.6.1",
     "@segment/analytics-node": "^1.1.4",
     "ampersand-view": "^9.0.0",
+    "bson": "^6.10.1",
     "chai": "^4.3.4",
     "chalk": "^4.1.2",
     "clean-stack": "^2.0.0",
