Try using trigger_branch

--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -669,7 +669,7 @@ functions:
           # Load environment variables
           eval $(.evergreen/print-compass-env.sh)
           # Start the smoke tests on GitHub Actions and wait for successful completion
-          npm run --workspace @mongodb-js/compass-smoke-tests start -- dispatch --ref ${branch_name}
+          npm run --workspace @mongodb-js/compass-smoke-tests start -- dispatch --ref ${trigger_branch}
 
   test-web-sandbox:
     - command: shell.exec
