chore: bump at root to force hoisting

--- a/package.json
+++ b/package.json
@@ -101,5 +101,8 @@
     "chai-enzyme": {
       "cheerio": "1.0.0-rc.10"
     }
+  },
+  "dependencies": {
+    "mongodb-log-writer": "^2.3.4"
   }
 }
