Update evergreen config to use target_platform instead of silk_asset_group

--- a/.evergreen/buildvariants-and-tasks.in.yml
+++ b/.evergreen/buildvariants-and-tasks.in.yml
@@ -174,7 +174,7 @@ buildvariants:
 <% for (const buildVariant of PACKAGE_BUILD_VARIANTS) { %>
   - name: <%= buildVariant.name %>
     expansions:
-      silk_asset_group: <%= buildVariant.silk_asset_group %>
+      target_platform: <%= buildVariant.target_platform %>
     display_name: <%= buildVariant.display_name %>
     run_on: <%= buildVariant.run_on %>
     tasks:
