--- a/.github/workflows/test-installers.yml
+++ b/.github/workflows/test-installers.yml
@@ -114,6 +114,22 @@ jobs:
           - hadron-distribution: compass-readonly
             test: auto-update-to
 
+          # Skip auto-update-to tests for anything except the one release
+          # package we install for that platform and arch, because that's the
+          # only one that gets installed and therefore updated.
+          # Se https://github.com/10gen/compass-mongodb-com/blob/ae1ce87c54ab8702e94b154ffe2bfb9997b56661/src/routes/update.js#L320-L411
+          # ie. only leave osx_dmg, windows_setup, linux_deb, linux_rpm
+          - test: auto-update-to
+            package: osx_zip
+          - test: auto-update-to
+            package: windows_zip
+          - test: auto-update-to
+            package: windows_msi
+          - test: auto-update-to
+            package: linux_tar
+          - test: auto-update-to
+            package: linux_rpm
+
           # Skip time-to-first-query tests for readonly because it doesn't have editable documents
           # See https://github.com/mongodb-js/compass/actions/runs/13286945911/job/37097791601
           - hadron-distribution: compass-readonly
