--- a/.evergreen/functions.yml
+++ b/.evergreen/functions.yml
@@ -667,6 +667,7 @@ functions:
           <<: *compass-env
           DEBUG: ${debug|}
           GITHUB_TOKEN: ${generated_token}
+          GITHUB_PR_NUMBER: ${github_pr_number}
           EVERGREEN_TASK_URL: https://spruce.mongodb.com/task/${task_id}
         script: |
           set -e
