feat: enable auto-update-to tests, auto-update-from on mac and upload logs COMPASS-9063 COMPASS-8128 (#6749)
* try and enable all the skipped tests

* upload logs

* longer timeout

* also do the no-sandbox thing on linux_tar

* remove comment that seems to be invalid

* strip down how many auto-update-to tests we run

* add a timeout for the test job

* disable linux_tar again

* Update .github/workflows/test-installers.yml

Co-authored-by: Kræn Hansen <kraen.hansen@mongodb.com>

* remove linux_tar fixes

* bump timeout

* bump the timeout where we wait for the update to finish downloading

* disable auto-update-from on windows again

* Revert "bump the timeout where we wait for the update to finish downloading"

This reverts commit 09b13ca1eb54f061afdabd8be18e2cee3956a49a.

---------

Co-authored-by: Kræn Hansen <kraen.hansen@mongodb.com>

--- a/.github/workflows/test-installers.yml
+++ b/.github/workflows/test-installers.yml
@@ -41,6 +41,7 @@ jobs:
         run: echo "[Evergreen Task](${{ github.event.inputs.evergreen_task_url }})" >> $GITHUB_STEP_SUMMARY
   test:
     name: ${{ matrix.package }} test ${{ matrix.test }} (${{ matrix.hadron-distribution }})
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -55,9 +56,8 @@ jobs:
           - windows_msi
           - windows_setup
           - linux_deb
-          # TODO: Re-enable (see https://github.com/mongodb-js/compass/actions/runs/13281152689/job/37079619474)
-          # - linux_tar
-          # TODO: Enable (needs a docker container)
+          # TODO(COMPASS-9061): Fix and enable the linux_tar smoke tests
+          #- linux_tar
           - linux_rpm
         hadron-distribution:
           - compass
@@ -93,10 +93,11 @@ jobs:
             runs-on: ubuntu-latest
             arch: x64
             hadron-platform: linux
-          # - package: linux_tar
-          #   runs-on: ubuntu-latest
-          #   arch: x64
-          #   hadron-platform: linux
+          # TODO(COMPASS-9061): Fix and enable the linux_tar smoke tests
+          #- package: linux_tar
+          #  runs-on: ubuntu-latest
+          #  arch: x64
+          #  hadron-platform: linux
           - package: linux_rpm
             runs-on: ubuntu-latest
             arch: x64
@@ -120,12 +121,6 @@ jobs:
             install-update-server: true
 
         exclude:
-          # TODO: See https://github.com/mongodb-js/compass/actions/runs/13281152689/job/37079620322
-          - package: osx_dmg
-            test: auto-update-from
-          # TODO: See https://github.com/mongodb-js/compass/actions/runs/13281152689/job/37079621700
-          - package: windows_setup
-            test: auto-update-from
           # Skip auto-update tests for isolated and readonly distributions for now
           # This is not supported by the update server we're using in the test harness
           - hadron-distribution: compass-isolated
@@ -136,18 +131,34 @@ jobs:
             test: auto-update-from
           - hadron-distribution: compass-readonly
             test: auto-update-to
-          # Temporary skip failing auto-update-to tests
+
+
+          # TODO(COMPASS-9067): auto-update-from does not work for windows. Not
+          # even manually. It downloads the releases file, the toast appears
+          # that says it is downloading the update, the log appears that says
+          # thatit is downloading the update, but it never makes the request to
+          # the update server to actually download the .nupkg file. Strangely
+          # auto-update-to works. (which starts with the latest release and then
+          # updates to the newly packaged one) and auto-updating from an old dev
+          # version also works. it seems to be the fact that it is actually
+          # downgrading from the new package to the most recent release that
+          # breaks it? Can't see any other difference.
+          - test: auto-update-from
+            package: windows_setup
+
+          # Skip auto-update-to tests for anything except the one release
+          # package we install for that platform and arch, because that's the
+          # only one that gets installed and therefore updated.
+          # See https://github.com/10gen/compass-mongodb-com/blob/ae1ce87c54ab8702e94b154ffe2bfb9997b56661/src/routes/update.js#L320-L411
+          # ie. only leave osx_dmg, windows_setup, linux_deb, linux_rpm
           - test: auto-update-to
-            package: osx_dmg
+            package: osx_zip
           - test: auto-update-to
             package: windows_zip
           - test: auto-update-to
             package: windows_msi
           - test: auto-update-to
-            package: windows_setup
-          # Waiting for https://github.com/10gen/compass-mongodb-com/pull/122 to be released
-          - test: auto-update-to
-            package: linux_deb
+            package: linux_tar
           - test: auto-update-to
             package: linux_rpm
 
@@ -221,3 +232,11 @@ jobs:
         working-directory: packages/compass-smoke-tests
         # Using --skipUninstalling --skipCleanup because the runners are ephemeral
         run: npm start -- --package ${{ matrix.package }} --tests ${{ matrix.test }} --skipUninstall --skipCleanup
+
+      - name: 'Upload logs'
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: ${{ matrix.hadron-distribution}}-${{ matrix.hadron-platform}}-${{ matrix.arch }}-${{ matrix.package }}-${{ matrix.test }}-logs
+          path: packages/compass-e2e-tests/.log/
+          include-hidden-files: true
