--- a/packages/compass-crud/package.json
+++ b/packages/compass-crud/package.json
@@ -95,6 +95,7 @@
     "jsondiffpatch": "^0.5.0",
     "lodash": "^4.17.21",
     "mongodb-data-service": "^22.25.5",
+    "mongodb": "^6.12.0",
     "mongodb-ns": "^2.4.2",
     "mongodb-query-parser": "^4.3.0",
     "numeral": "^2.0.6",
