--- a/packages/compass/package.json
+++ b/packages/compass/package.json
@@ -141,12 +141,13 @@
   "scripts": {
     "install": "node scripts/download-fonts.js && node scripts/download-csfle.js",
     "electron-rebuild": "node scripts/electron-rebuild.js",
-    "prestart": "npm run electron-rebuild && npm run compile --workspace=@mongodb-js/webpack-config-compass",
+    "prestart": "npm run electron-rebuild",
     "start": "HADRON_DISTRIBUTION=${HADRON_DISTRIBUTION:-compass} npm run webpack serve -- --mode development",
     "test-electron": "npm run test-main && npm run test-renderer",
     "test-main": "xvfb-maybe electron-mocha --no-sandbox \"./src/main/**/*.spec.*\"  \"./src/main/**/*.test.*\"",
     "test-renderer": "xvfb-maybe electron-mocha --no-sandbox --config ./.mocharc.renderer.js \"./src/app/**/*.spec.*\"",
     "check": "npm run typecheck && npm run lint && npm run depcheck",
+    "prewebpack": "echo \"making sure compass webpack config is up to date...\" && npm run compile --workspace=@mongodb-js/webpack-config-compass",
     "webpack": "webpack-compass",
     "compile": "npm run webpack -- --mode production",
     "postcompile": "npm run generate-3rd-party-notices",
