--- a/packages/compass-schema-analysis/package.json
+++ b/packages/compass-schema-analysis/package.json
@@ -49,16 +49,23 @@
     "test-ci": "npm run test-cov",
     "reformat": "npm run eslint . -- --fix && npm run prettier -- --write ."
   },
+  "dependencies": {
+    "@mongodb-js/compass-connections": "^1.50.5",
+    "mongodb": "^6.14.1",
+    "mongodb-schema": "^12.4.0",
+    "@mongodb-js/compass-logging": "^1.6.5",
+    "compass-preferences-model": "^2.33.5"
+  },
   "devDependencies": {
-    "@mongodb-js/compass-connections": "^1.50.3",
     "@mongodb-js/eslint-config-compass": "^1.3.3",
     "@mongodb-js/mocha-config-compass": "^1.6.3",
     "@mongodb-js/prettier-config-compass": "^1.2.3",
-    "@mongodb-js/testing-library-compass": "^1.2.3",
     "@mongodb-js/tsconfig-compass": "^1.2.3",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/sinon-chai": "^3.2.5",
+    "bson": "^6.10.3",
+    "hadron-document": "^8.8.5",
     "chai": "^4.3.6",
     "depcheck": "^1.4.1",
     "eslint": "^7.25.0",
