--- a/packages/compass-connections/package.json
+++ b/packages/compass-connections/package.json
@@ -69,7 +69,8 @@
     "react": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "semver": "^7.7.1"
   },
   "devDependencies": {
     "@mongodb-js/eslint-config-compass": "^1.3.8",
